# policy_mate

./: .gitignore  PROJECT_STORY.md  README.md  README_OLD.md  WhiteBoard.md  docker-compose.yml  output.json  vercel.json
lambdas/: .bedrock_agentcore.yaml  .env.example  .gitignore  COMPREHENSIVE_CHECK_DEPLOYMENT.md  COMPREHENSIVE_CHECK_SUMMARY.md  GEMINI_SETUP.md  QUICK_REFERENCE.md  README.md  agent.py  agent_handler.py  agent_response.json  agent_v2_handler.py  annotations_agent_handler.py  auth_claims_handler.py  authentication_handler.py  compliance_check_handler.py  comprehensive_check_handler.py  conversation_history_handler.py  create_handler_zip.sh  deploy.sh  deploy_agent.py  doc_status_handler.py  document_handler.py  file_confirmation_handler.py  file_upload_handler.py  handler.py  ingestion_handler.py  output.json  polling_handler.py  publish_to_s3.sh  pyproject.toml  requirements.txt  show_doc_handler.py  test_agent.py  test_local.py  test_parse_json.py  test_payload.json  test_show_doc.py
lambdas/.bedrock_agentcore/policyMate/: Dockerfile
lambdas/.bedrock_agentcore/policyMateV2/: Dockerfile
lambdas/bedrock_minimal/: bedrock_handler.py  bedrock_handler_policy.json  deploy.sh  pyproject.toml  test.py
lambdas/instructions/: policyMateDocumentAgent.md  policyMateIngestionAgent.md
lambdas/meta/: agentcore_dynamodb_policy.json  deployment.md  lambda_routes.json  policy.json
lambdas/meta/dynamo_db_tables/: annotations.json  compliance_controls.json  compliance_reports.json  conversation_history.json  files.json  inferred_files.json  user_files.json
lambdas/meta/tomls/: auth_claims_handler.pyproject.toml  file_confirmation_handler.pyproject.toml  file_upload_handler.pyproject.toml
lambdas/pre/: compliance.json  load_compliance.py  load_embeddings.py  load_indexing.py  migrate_from_serverless.py  migrate_to_aws.py
lambdas/schemas/: agent_handler.yml  authentication_handler_schema.yml  compliance_check_handler.yml  comprehensive_check_handler.yml  conversation_history_handler.yml  doc_status_handler.yml  document_handler_schema.yml  ingestion_handler_schema.yml  show_doc_handler.yml
lambdas/src/: StrandsPrompt.md
lambdas/src/agents/: annotations_agent.py  compliance_agent.py  supervisor_agent.py
lambdas/src/tools/: annotation_tools.py  (+4 more)
lambdas/tests/: test.py
lambdas/utils/: response.py
(+166 files in other folders)
