[project]
name = "policy-mate-lambda"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aws-lambda-typing>=2.20.0",
    "boto3>=1.35.0",
    "boto3-stubs[bedrock-agent-runtime,dynamodb,s3]>=1.40.45",
    "litellm>=1.0.0",
    "opensearch-py>=3.0.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.32.0",
    "requests-aws4auth>=1.3.1",
    "typing-extensions>=4.15.0",
    "uuid6>=2025.0.1",
]
