[project]
name = "bedrock-handler-minimal"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aws-lambda-typing>=2.20.0",
    "boto3>=1.35.0",
    "mypy-boto3-bedrock-agent-runtime>=1.40.0",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.32.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
